# EDColonisationAsst

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_1_backend.md  ARCHITECTURE_2_frontend_and_runtime.md  BUILD_ID  DEVELOPMENT-README.md  DEVELOPMENT_README.md  GameGlass-Integration.md  PROJECT_SETUP.md  README.md  TESTING.md  buildexe.py  buildguiinstaller.py  buildinstaller.py  buildruntime.py  pytest.ini
.github/workflows/: deploy-gameglass.yml
backend/: pyproject.toml  pytest.ini
backend/src/: __init__.py  colonisation.db  main.py
backend/src/api/: __init__.py  carriers.py  changes.py  routes.py  settings.py  websocket.py
backend/src/models/: __init__.py  api_models.py  carriers.py  journal_events.py
backend/src/runtime/: app_runtime.py  help_menu.py  splash.py  tray_components.py
backend/src/services/: carrier_service.py  change_bus.py  file_watcher.py  journal_ingestion.py  journal_parser.py  market_export_service.py
backend/tests/unit/: test_api_carriers.py  test_api_routes.py  test_app_runtime_readiness.py  test_config_and_runtime.py  test_coverage_api_carriers.py  test_coverage_api_misc.py  test_coverage_carrier_service.py  test_coverage_change_bus.py  test_coverage_config.py  test_coverage_file_watcher.py  test_coverage_file_watcher_process_existing.py  test_coverage_journal_ingestion.py  test_coverage_journal_misc.py  test_coverage_journal_parser.py  test_coverage_market_export.py  test_coverage_models_misc.py  test_coverage_repository.py  test_coverage_version_utils.py  test_help_menu.py  test_lifespan_readiness.py  test_main_app.py  test_runtime_components.py  test_splash.py  test_system_tracker_and_utils.py  test_websocket.py
backend/tools/: check_live_carrier_api.py  debug_carrier_orders.py  find_port_owner.py  reconstruct_current_carrier_state.py
docs/: index.html  robots.txt  sitemap.xml  why.html
frontend/: package-lock.json
frontend/src/: App.test.tsx  App.tsx
frontend/src/services/: api.ts
installer/: app.py  css.py
(+6 files in other folders)
