[project]
name = "ed-colonisation-assistant-backend"
# The canonical version lives in the top-level VERSION file; nothing else
# hardcodes a version (see backend/src/__init__.py for the runtime read).
dynamic = ["version"]
description = "Backend for Elite: Dangerous Colonisation Assistant"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.dynamic]
version = { file = ["../VERSION"] }

[tool.black]
line-length = 88
target-version = ["py311"]
include = "src/.*\\.pyi?$"
exclude = """
/(
    \\.git
  | \\.venv
  | \\.mypy_cache
  | \\.pytest_cache
  | build
  | dist
)/
"""

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]
src_paths = ["src"]
skip = [".venv", "build", "dist", ".mypy_cache", ".pytest_cache"]
combine_as_imports = true
force_sort_within_sections = true
order_by_type = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["src"]
# The coverage gate is scoped to the testable backend surface. The Qt
# runtime shell (tray, splash, launcher, single-instance lock, in-process
# uvicorn orchestration) and the thin entrypoints are excluded: they are
# either fragile PySide6 UI surfaces or process-level composition roots.
# Their pure logic (readiness monitor, menu wiring, process groups) is
# extracted into testable form and covered via the unit tests.
omit = [
    "src/main.py",
    "src/launcher.py",
    "src/tray_app.py",
    "src/runtime_entry.py",
    "src/runtime/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]
extend-select = [
  "E",
  "F",
  "W",
  "I",  # isort-compatible import rules via Ruff, if you choose to enable them later
]

[tool.ruff.isort]
known-first-party = ["src"]
force-sort-within-sections = true
combine-as-imports = true
